2001-11-30  Radek Doulik  <rodo@ximian.com>

	* configure.in: remove ACCESS_UNALIGNED="no" from ppc

2001-11-29  Radek Doulik  <rodo@ximian.com>

	* configure.in (ACCESS_UNALIGNED): uncommented and modified
	powerpc-*-linux* 
	generate mono/arch/ppc/Makefile

2001-11-26  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/exception3.cs: modified the test to show a bug in the
	current exception handling implementation.

2001-11-13  Dick Porter  <dick@ximian.com>

	* configure.in: Some more tests for pthread features
	(specifically, glibc 2.1 doesnt define pthread_mutex_timedlock but
	still needs _GNU_SOURCE for PTHREAD_MUTEX_RECURSIVE)

2001-11-09  Dick Porter  <dick@ximian.com>

	* configure.in: Try and get large file support, but it's not fatal
	if it's not there (the io-layer just ignores the high word in that
	case.)

	Check for windows builds, and only bother to look for pthreads and
	large files if we're not building for cygwin or native win32.  Not
	having pthread support on Posix systems is now a fatal error.

	* autogen.sh: Fix ACLOCAL_FLAGS - it wasn't being passed to
	aclocal

2001-10-15  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/Makefile.am: removed JITTESTS, simply run all tests for
	target testjit. 

2001-10-11  Dietmar Maurer  <dietmar@ximian.com>

	* docs/object-layout: more documentation

Mon Oct 8 20:27:50 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* configure.in: define NO_UNALIGNED_ACCESS for platforms that
	can't read on unaligned boundaries

2001-10-04  Dick Porter  <dick@ximian.com>

	* configure.in: Do some deeper checks on pthreads for some of the
	more interesting functions

2001-09-24  Dietmar Maurer  <dietmar@ximian.com>

	* mono/tests/Makefile.am (testjit): a new target to test the JITer

	* mono/tests/jit-*: added some test for the JITer

2001-09-23  Dick Porter  <dick@ximian.com>

	* configure.in: Arrange to compile dummy thread support routines
	if pthread isnt available
	
2001-09-23  Dick Porter  <dick@ximian.com>
